using bootstrap name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
   </head>
   <body>
-    <div id="main"></div>
+    <div class="container"></div>
     <script type="text/javascript" src="/public/bundle.js"></script>
   </body>
 </html>
